Add fixed container for splash.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,7 @@
 @import 'styles/_base.scss';
 
+@import './modules/HomePage/homepage';
+
 body {
   //background: $theme_dark_color; TODO remove
   margin: 0 !important;
