--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -1,4 +1,4 @@
-$splash_height: 300px;
+$splash_height: 500px;
 $splash_stages: 4;
 
 #homepage{
@@ -9,7 +9,6 @@ $splash_stages: 4;
     left: 0;
     width: 100%;
     height: $splash_height;
-    background-color: green;
   }
 
   .homepage-content-container{
@@ -29,10 +28,9 @@ $splash_stages: 4;
 
     .homepage-content{
       height: 200vh;
-      background-color: black;
-      h1 {
-        color: white;
-      }
+      background-color: white;
     }
   }
 }
+
+@import "./Splash/splash";
