--- a/src/app/modules/HomePage/Splash/splash.scss
+++ b/src/app/modules/HomePage/Splash/splash.scss
@@ -7,7 +7,8 @@ $circle-scale-three: 5;
 $bulb-initial-blue : 5px;
 $two-bulb-blur   : 2px;
 
-$transition-time   : 300ms;
+$transition-time   : 1000ms;
+$bg-transition-time   : 300ms;
 $transition-function   : ease;
 $one-transition-time: $transition-time;
 
@@ -34,7 +35,7 @@ $four-slide-offset : 25vh;
     width: 100vw;
     position: relative;
     background-color: white;
-    @include transition(#{background $transition-time $transition-function, transform $transition-time $transition-function});
+    @include transition(#{background $bg-transition-time $transition-function, transform $transition-time $transition-function});
 
     .bulb, .bulb-outline{
       position: absolute;
@@ -42,6 +43,7 @@ $four-slide-offset : 25vh;
       width   : $bulb-width;
       left    : calc(50% - #{$bulb-width/2});
       top     : calc(50% - #{$bulb-height/2});
+      filter: blur(1px) grayscale(100%);
       @include transition(opacity $transition-time $transition-function);
     }
     .circle{
@@ -52,62 +54,66 @@ $four-slide-offset : 25vh;
       top     : calc(50% - #{$circle-size/2});
       background-color: black;
       border-radius: 50%;
-      @include transition(transform $transition-time $transition-function);
+      @include transition(transform $bg-transition-time $transition-function);
       @include transform(scale(0))
     }
     .bulb{
       opacity: 0;
+      @include transition(opacity $bg-transition-time $transition-function);
       filter: blur($bulb-initial-blue) grayscale(100%);
     }
   }
 
-  .scroller.one-sketch{
-    background-color: #fbfbfb;
-    .circle{
-      @include transform(scale(1));
-    }
-    .bulb-outline{
-      opacity: 0;
-    }
-    .bulb{
-      opacity: 1;
-      filter: blur($bulb-initial-blue) grayscale(100%);
-    }
-  }
+  //.scroller.one-sketch{
+  //  background-color: #fbfbfb;
+  //  .circle{
+  //    @include transform(scale(1));
+  //  }
+  //  .bulb-outline{
+  //    opacity: 0;
+  //  }
+  //  .bulb{
+  //    opacity: 1;
+  //    filter: blur($bulb-initial-blue) grayscale(100%);
+  //  }
+  //}
 
-  .scroller.two-begin{
-    background-color: #eee;
-    @include transform(translateY(-$two-slide-offset));
+  //.scroller.two-begin{
+  //  background-color: #eee;
+  //  @include transform(translateY(-$two-slide-offset));
+  //
+  //  .circle{
+  //    @include transform(scale($circle-scale-two));
+  //  }
+  //  .bulb-outline{
+  //    opacity: 0;
+  //  }
+  //  .bulb{
+  //    opacity: 1;
+  //    filter:blur($two-bulb-blur) grayscale(50%);
+  //  }
+  //}
+  //
+  //.scroller.three-expand{
+  //  background-color: rgba(0, 0, 0, 0.62);
+  //  @include transform(translateY(-$three-slide-offset));
+  //
+  //  .circle{
+  //    @include transform(scale($circle-scale-three));
+  //  }
+  //  .bulb-outline{
+  //    opacity: 0;
+  //  }
+  //  .bulb{
+  //    opacity: 1;
+  //    filter: blur(0) grayscale(50%);
+  //  }
+  //}
 
-    .circle{
-      @include transform(scale($circle-scale-two));
-    }
-    .bulb-outline{
-      opacity: 0;
-    }
-    .bulb{
-      opacity: 1;
-      filter:blur($two-bulb-blur) grayscale(50%);
-    }
-  }
-
-  .scroller.three-expand{
-    background-color: rgba(0, 0, 0, 0.62);
-    @include transform(translateY(-$three-slide-offset));
-
-    .circle{
-      @include transform(scale($circle-scale-three));
-    }
-    .bulb-outline{
-      opacity: 0;
-    }
-    .bulb{
-      opacity: 1;
-      filter: blur(0) grayscale(50%);
-    }
-  }
-
-  .scroller.four-fill{
+  .scroller.four-fill,
+  .scroller.three-expand,
+  .scroller.two-begin
+  {
     background-color: black;
     @include transform(translateY(-$four-slide-offset));
 
@@ -120,6 +126,7 @@ $four-slide-offset : 25vh;
     .bulb{
       opacity: 1;
       filter: blur(0) grayscale(0%);
+      @include transition(opacity $transition-time $transition-function);
       @include animation(float 6s ease-in-out infinite);
     }
   }
