--- a/src/app/modules/HomePage/Splash/splash.scss
+++ b/src/app/modules/HomePage/Splash/splash.scss
@@ -7,14 +7,16 @@ $circle-scale-three: 5;
 $bulb-initial-blue : 5px;
 $two-bulb-blur   : 2px;
 
-$transition-time   : 1000ms;
-$bg-transition-time   : 1000ms;
+$transition-time   : 500ms;
+$bg-transition-time   : 500ms;
 $transition-function   : ease;
 $one-transition-time: $transition-time;
 
-$two-slide-offset  : 5vh;
-$three-slide-offset: 10vh;
-$four-slide-offset : 25vh;
+$total_slides: 4;
+$one-slide-offset  : 0%;
+$two-slide-offset  : 100px;
+$three-slide-offset: 27%;
+$four-slide-offset : 38%;
 
 @keyframes float {
   0% {
@@ -54,7 +56,7 @@ $four-slide-offset : 25vh;
       background-color: black;
       border-radius: 50%;
       @include transition(transform $bg-transition-time $transition-function);
-      @include transform(scale(0))
+      @include transform(scale(0));
     }
     .bulb{
       opacity: 0;
@@ -109,22 +111,52 @@ $four-slide-offset : 25vh;
   //  }
   //}
 
-  .scroller.four-fill,
-  .scroller.three-expand,
-  .scroller.two-begin
-  {
-    background-color: black;
-    @include transform(translateY(-$four-slide-offset));
-
-    .circle{
-      @include transform(scale(0));
+  .scroller.one{
+    @include transform(translateY(-$one-slide-offset));
+    .bulb-outline{
+      opacity: 1;
     }
+    .bulb{
+      opacity: 0.5;
+      filter: blur(5px) grayscale(0%);
+    }
+  }
+
+  .scroller.scroller.two{
+    @include transform(translateY(-$two-slide-offset));
+    .bulb-outline{
+      opacity: 1;
+    }
+    .bulb{
+      opacity: 1;
+      filter: blur(5px) grayscale(0%);
+    }
+  }
+
+  .scroller.scroller.three{
+    @include transform(translateY(-$three-slide-offset) scale(0.75));
+    .bulb-outline{
+      opacity: 0.5;
+    }
+    .bulb{
+      opacity: 1;
+      filter: blur(1px) grayscale(10%);
+    }
+  }
+
+  .scroller.four {
+    background-color: black;
+    @include transform(translateY(-$four-slide-offset) scale(0.5));
+
+    //.circle{
+    //  @include transform(scale(0));
+    //}
     .bulb-outline{
       opacity: 0;
     }
     .bulb{
       opacity: 1;
-      filter: blur(0) grayscale(0%);
+      filter: blur(1px) grayscale(10%);
       @include transition(opacity $transition-time $transition-function);
       @include animation(float 6s ease-in-out infinite);
     }
