--- a/src/app/modules/HomePage/TopBar/top-bar.scss
+++ b/src/app/modules/HomePage/TopBar/top-bar.scss
@@ -1,25 +1,24 @@
 $profile_full_image_height: 120px;
 $slope_top_offset: 40px;
 
-#top-bar{
-  .profile-bar{
+#top-bar {
+  .profile-bar {
     padding: 0 10px;
     overflow: hidden;
-    .profile{
-      position: relative;
-      z-index: 1;
+    position: relative;
+    .profile {
       img {
+        position: relative;
         display: block;
         height: $profile_full_image_height;
         border: 3px solid white;
-        position: relative;
         border-radius: 1px;
         @include transition($transition);
       }
     }
-    .slope-bg{
-      position: relative;
-      top:  -$profile_full_image_height + $slope_top_offset;
+    .slope-bg {
+      position: absolute;
+      top: $slope_top_offset;
       left: -10px;
       height: $profile_full_image_height;
       width: 150%;
@@ -28,23 +27,40 @@ $slope_top_offset: 40px;
       @include transform(rotate(2deg));
       @include transition($transition);
     }
+
+    .profile-info {
+      position: relative;
+      text-align: left;
+      .profile-name,
+      .profile-title {
+        display: block;
+      }
+
+      .profile-name {
+        font-weight: $font_weight_bold;
+        font-size: $large_font;
+      }
+
+      .profile-title {
+        font-size: $small_font;
+      }
+    }
   }
 
-  .profile-bar.fixed-to-page{
+  .profile-bar.fixed-to-page {
     @include transform(translateY(-$profile_full_image_height));
   }
-
 }
 
-#homepage.stick-topbar{
-  #top-bar{
-    .profile-bar{
-      .profile{
-        img{
-          @include transform(translateY(-2*$profile_full_image_height));
+#homepage.profile-reached {
+  #top-bar {
+    .profile-bar {
+      .profile {
+        img {
+          @include transform(translateY(-2 * $profile_full_image_height));
         }
       }
-      .slope-bg{
+      .slope-bg {
         @include transform(rotate(0deg));
       }
     }
