--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -7,6 +7,11 @@ $green: #7ed321;
 $grey: #eee;
 $danger_red: #f44336;
 
+$stack_overflow_orange: $theme_contrast_highlight;
+$twitter_blue: $blue;
+$linkedin_blue: $blue;
+$github_grey: black;
+
 $love_color: $danger_red;
 $skill_color: $theme_contrast_highlight;
 $money_color: $green;
