Addsing search and filter global state.

--- a/src/app/styles/_material.scss
+++ b/src/app/styles/_material.scss
@@ -11,3 +11,5 @@ $elevated_card_shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.2);
 $elevated_card_inset_shadow: inset 1px 1px 20px 0px rgba(0, 0, 0, 0.2);
 
 $block_screen_zindex: 99999;
+
+$top_bar_zindex: 2;
