--- a/src/app/modules/HomePage/TopBar/top-bar.scss
+++ b/src/app/modules/HomePage/TopBar/top-bar.scss
@@ -53,6 +53,7 @@ $navigation_links_height: 46px;
     opacity: 0;
     pointer-events: none;
     background-color: white;
+    z-index: $top_bar_zindex;
   }
 }
 
