Show tags by section and filter by tags in search input.

--- a/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
+++ b/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
@@ -12,10 +12,16 @@
     top: 100%;
     left: 0;
     width: 100%;
+    text-align: left;
     > div {
       @include transition($transition);
       background-color: $light_white;
       padding: 0 10px;
+    }
+    .tag-link {
+      color: $blue;
+      cursor: pointer;
+      margin-right: 5px;
     }
   }
 
