--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -1,5 +1,5 @@
 $theme_dark_color: black;
-$theme_light_bg: #fbfbfb;
+$theme_light_bg: white;
 $theme_contrast_highlight: #ffc107;
 
 $blue: #2196f3;
