--- a/src/app/modules/HomePage/TopBar/top-bar.scss
+++ b/src/app/modules/HomePage/TopBar/top-bar.scss
@@ -53,7 +53,7 @@ $navigation_links_height: 46px;
     width: 100%;
     opacity: 0;
     pointer-events: none;
-    background-color: white;
+    background-color: transparent;
     z-index: $top_bar_zindex;
   }
 }
