--- a/src/app/modules/HomePage/SideBar/sidebar.scss
+++ b/src/app/modules/HomePage/SideBar/sidebar.scss
@@ -3,6 +3,7 @@
   position: relative;
   top: -$search_bar_height;
   left: 0;
+  padding-top: 10px;
   padding-left: $side_padding;
   font-size: $small_font;
   width: $homepage_side_bar_width;
