--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -1,6 +1,7 @@
 $system_font: 'Open Sans', sans-serif;
 
 $small_font: small;
+$very_small_font: 11px;
 $large_font: large;
 
 $font_weight_bold: 700;
