--- a/src/app/styles/_material.scss
+++ b/src/app/styles/_material.scss
@@ -5,6 +5,7 @@ $transition_function: ease;
 
 $transition: all $transition_time $transition_function;
 
+$tab_button_shadow: 2px 0px 10px 2px rgba(0, 0, 0, 0.2);
 $inside_card_shodow: inset 2px 2px 10px 0px rgba(0, 0, 0, 0.1);
 $input_inset_shadow: inset 0px 0px 1px 0px rgba(0, 0, 0, 0.75);
 $elevated_card_shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.2);
