Add material effect- 3

--- a/src/app/modules/HomePage/TopBar/navigation.profile-reached.scss
+++ b/src/app/modules/HomePage/TopBar/navigation.profile-reached.scss
@@ -8,3 +8,8 @@
     }
   }
 }
+.profile-image-container {
+  img {
+    @include transform(translateX(calc(-100% - #{$side_padding + 10px})));
+  }
+}
