--- a/src/app/modules/HomePage/TopBar/navigation.profile-reached.scss
+++ b/src/app/modules/HomePage/TopBar/navigation.profile-reached.scss
@@ -1,10 +1,12 @@
 .navigation {
   .profile-info {
     .small-profile-image {
-      @include transform(translateX(0));
+      @include transform(translateX(0) translateY(10px));
     }
     .profile-labels {
-      @include transform(translateX(5px) scale($small_profile_scale));
+      @include transform(
+        translateY(10px) translateX(5px) scale($small_profile_scale)
+      );
     }
   }
 }
@@ -12,4 +14,8 @@
   img {
     @include transform(translateX(calc(-100% - #{$side_padding + 10px})));
   }
+}
+
+.work-credits {
+  opacity: 1;
 }
