Styling search and filter input with icon and transitions.

--- a/src/app/modules/HomePage/TopBar/top-bar.scss
+++ b/src/app/modules/HomePage/TopBar/top-bar.scss
@@ -105,6 +105,10 @@ $navigation_links_height: 46px;
       opacity: 0;
     }
   }
+
+  .route-view-container {
+    @include transform(translateY(-45px));
+  }
 }
 
 #homepage:not(.scrolling-up) {
