--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -24,6 +24,7 @@ $canvas_bg: white;
 $light_white: #fbfbfb;
 $dull_white_text: rgba(255, 255, 255, 0.5);
 
+$light_grey_border_color: #dadada;
 $light_border_color: rgba(0, 0, 0, 0.1);
 $light_white_border_color: rgba(255, 255, 255, 0.15);
 
