--- a/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
+++ b/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
@@ -1,27 +1,76 @@
+$search_icon_width: 45px;
+$search_height: 40px;
+$search_input_offset: 5px;
+
 .search-and-filter {
   position: relative;
   background: $theme_dark_color;
   padding: 10px;
   @include transition(transform $transition_time $transition_function);
-  input {
-    display: block;
-    width: 100%;
+  .search-and-filter-input {
     position: relative;
     z-index: 1;
+    overflow: hidden;
     background-color: $light_white;
+    border-radius: 5px;
+
+    .search-icon {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 2;
+      line-height: $search_height;
+      width: $search_icon_width;
+      background: $grey;
+      color: $light_black_text;
+      @include transition($transition);
+    }
+    input {
+      display: block;
+      width: 100%;
+      position: relative;
+      padding-left: $search_icon_width + 10px;
+      border: 1px solid transparent;
+      background-color: transparent;
+      height: $search_height;
+      line-height: $search_height;
+      font-weight: $font_weight_bold;
+      @include transition($transition);
+    }
+    @include placeholder {
+      color: $light_border_color;
+      font-weight: $font_weight_bold;
+    }
+
+    &.deactivate {
+      display: block;
+      input {
+        color: $light_black_text;
+        @include transform(
+          translateX(-$search_icon_width + $search_input_offset * 2 + 10px)
+        );
+      }
+      .search-icon {
+        color: $light_border_color;
+        background-color: transparent;
+        @include transform(translateX(-$search_input_offset));
+      }
+    }
   }
 
   .search-and-filter-dropdown {
     position: absolute;
     top: calc(100% - 10px);
-    left: 0;
-    width: 100%;
+    left: $search_icon_width + 10px;
+    width: calc(100% - #{$search_icon_width + 20px});
     text-align: left;
-    padding: 0 10px 10px;
-    background-color: $theme_dark_color;
+    //padding: 0 10px 10px;
+    //background-color: $theme_dark_color;
+    box-shadow: $drop_down_shadow;
+    border-top: 1px solid $light_grey_border_color;
     > div {
       @include transition($transition);
-      background-color: $light_white;
+      background-color: $grey;
       padding: 0 10px;
     }
     .tag-link {
@@ -41,11 +90,14 @@
   //}
 
   &:not(.active) {
+    .search-and-filter-input {
+      @extend .deactivate;
+    }
     .search-and-filter-dropdown {
       pointer-events: none;
-      opacity: 0;
       @include transform(scale(0));
       > div {
+        opacity: 0;
         @include transform(translateY(-100%));
       }
     }
