--- a/src/app/styles/_material.scss
+++ b/src/app/styles/_material.scss
@@ -13,6 +13,7 @@ $elevated_card_shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.2);
 $elevated_card_inset_shadow: inset 1px 1px 20px 0px rgba(0, 0, 0, 0.2);
 $bar_shadow: 10px 5px 5px 0 rgba(0, 0, 0, 0.16),
   10px 5px 10px 0 rgba(0, 0, 0, 0.12);
+$drop_down_shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.2);
 
 $block_screen_zindex: 99999;
 
