Extract search tab logic.

--- a/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
+++ b/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
@@ -12,7 +12,7 @@ $search_input_offset: 5px;
     z-index: 1;
     overflow: hidden;
     background-color: $light_white;
-    border-radius: 5px;
+    border-radius: $default_border_radius;
 
     .search-icon {
       position: absolute;
