Show blog items.

--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -56,4 +56,5 @@ $search_bar_height: 45px;
 @import './Splash/splash';
 @import './TopBar/top-bar';
 @import './Portfolio/index';
+@import './Blog/index';
 @import './SideBar/sidebar';
