--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -57,4 +57,5 @@ $search_bar_height: 45px;
 @import './TopBar/top-bar';
 @import './Portfolio/index';
 @import './Blog/index';
+@import './WorkHistory/index';
 @import './SideBar/sidebar';
